--- a/PNC/units.html
+++ b/PNC/units.html
@@ -23,7 +23,7 @@
                     list.appendChild(initializeHTML('dd', {textContent: `Fragment Locations: ${fragments.join(', ')}`}));
             }
 
-            document.querySelector('main_content div').appendChild(list);
+            document.querySelector('#main_content div').appendChild(list);
         </script>
 
         <meta charset='utf-8'>
