--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -3,7 +3,7 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
-            import { AsyncFunc, Compare, Cycle, initializeHTML } from "/univasset/scripts/externaljavascript.js";
+            import { AsyncFunc, Compare, initializeHTML } from "/univasset/scripts/externaljavascript.js";
 
             table(document.querySelector('#main_content div'),
                 (await AsyncFunc.getJSON('./unitstats.json')).slice(0, -1),
@@ -11,7 +11,8 @@
             );
             
             /** @param {HTMLElement} grouperElem
-             * @param {Array[]} tableMatrix */
+             * @param {Array[]} tableMatrix
+             * @param fragment If Array items are Document Fragments. */
             function table(grouperElem, tableMatrix, {sort = false, filter = false, frzcol = false, frzhdr = false, fragment = false} = {}) {
                 /** @type {HTMLTableElement} */
                 const tableElem = initializeHTML('table', null, {margin: 0});
@@ -29,8 +30,8 @@
                     tbodyElem.textContent = '';
                     for (const rows of nestedArray) {
                         const trElem = document.createElement('tr');
-                        trElem.appendChild(initializeHTML('th', {textContent: rows[0]}));
-                        for (const items of rows.slice(1, -1)) trElem.appendChild(initializeHTML('td', {textContent: items}));
+                        trElem.appendChild(initializeHTML('th', {textContent: rows[0]}, {borderBottom: 0}));
+                        for (const items of rows.slice(1)) trElem.appendChild(initializeHTML('td', {textContent: items}));
                         tbodyElem.appendChild(trElem);
                     }
                 }
@@ -47,54 +48,55 @@
                         //three way sort
                         //multi sort
                         const samplerow = tableMatrix[0];
-                        const origmatrix = tableMatrix;
                         headertr.dataset.onsort = 0;
                         const string_sort = {
                             no(cell) {
                                 const index = cell.dataset.index;
+                                cell.dataset.sort = 'hi';
 
-                                headertr.children.item(Number(headertr.dataset.onsort)).dataset.sort = 'no';
+                                headertr.children.item(headertr.dataset.onsort).dataset.sort = 'no';
                                 headertr.dataset.onsort = index;
 
-                                cell.dataset.sort = 'hi';
-                                return tableMatrix.sort((a, b) => Compare.string(a[index], b[index]));
+                                return tableMatrix.slice().sort((a, b) => Compare.string(a[index], b[index]));
                             },
                             hi(cell) {
-                                cell.dataset.sort = 'lo';
                                 const index = cell.dataset.index;
-                                return tableMatrix.sort((a, b) => Compare.string(b[index], a[index]));
+                                cell.dataset.sort = 'lo';
+
+                                return tableMatrix.slice().sort((a, b) => Compare.string(b[index], a[index]));
                             },
                             lo(cell) {
                                 cell.dataset.sort = 'no';
-                                return origmatrix;
+
+                                return tableMatrix;
                             }                                           
                         };
                         const number_sort = {
                             no(cell) {
                                 const index = cell.dataset.index;
+                                cell.dataset.sort = 'hi';
 
-                                headertr.children.item(Number(headertr.dataset.onsort)).dataset.sort = 'no';
+                                headertr.children.item(headertr.dataset.onsort).dataset.sort = 'no';
                                 headertr.dataset.onsort = index;
 
-                                cell.dataset.sort = 'hi';
-                                return tableMatrix.sort((a, b) => Compare.number(b[index], a[index]));
+                                return tableMatrix.slice().sort((a, b) => Compare.number(b[index], a[index]));
                             },
                             hi(cell) {
-                                cell.dataset.sort = 'lo';
                                 const index = cell.dataset.index;
-                                return tableMatrix.sort((a, b) => Compare.number(a[index], b[index]));
+                                cell.dataset.sort = 'lo';
+
+                                return tableMatrix.slice().sort((a, b) => Compare.number(a[index], b[index]));
                             },
                             lo(cell) {
                                 cell.dataset.sort = 'no';
-                                return origmatrix;
+
+                                return tableMatrix;
                             }                                           
                         };
 
                         for (const [index, headerCell] of Object.entries(headertr.children)) {
                             headerCell.dataset.index = index;
                             headerCell.dataset.sort = 'no';
-                            //const cycle = new Cycle('no', 'hi', 'lo');
-                            //headerCell.appendChild(initializeHTML('span', null, {position: 'absolute', 'margin-inline': '5px'}));
                             
                             switch (typeof samplerow[index]) {
                                 case 'string':
