--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -62,7 +62,7 @@
                     <!--tbody></tbody-->
                 </table>
 
-                Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>.
+                <p>Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>.</p>
             </section>
         </div>
     </body>
