--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -99,6 +99,7 @@
                         for (const [index, headerCell] of Object.entries(headertr.children)) {
                             headerCell.dataset.index = index;
                             headerCell.dataset.sort = 'no';
+                            headerCell.appendChild(document.createElement('span'));
                             
                             switch (typeof samplerow[index]) {
                                 case 'string':
@@ -180,6 +181,7 @@
     </head>
 
     <style>
+        /* #region General */
         .func_table {
             border-style: inset;
             overflow: auto;
@@ -188,7 +190,32 @@
         .func_table > table {
             margin: 0;
         }
+        /* #endregion */
 
+        /* #region Sort */
+        .func_table th[data-sort="no"] span {
+            content: '●';
+            position: relative;
+            left: 2px;
+            border: 8px solid transparent;
+        }
+
+        .func_table th[data-sort="hi"] span {
+            content: '▲';
+            position: relative;
+            left: 2px;
+            border: 8px solid transparent;            
+        }
+
+        .func_table th[data-sort="lo"] span {
+            content: '▼';
+            position: relative;
+            left: 2px;
+            border: 8px solid transparent;
+        }
+        /* #endregion */
+
+        /* #region Freeze Cells */
         .func_table .freeze_row {
             position: sticky;
             top: 0;
@@ -217,6 +244,7 @@
         .func_table th:first-child {
             z-index: 2;
         }
+        /* #endregion */
     </style>
 
     <body>
