--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -99,7 +99,6 @@
                         for (const [index, headerCell] of Object.entries(headertr.children)) {
                             headerCell.dataset.index = index;
                             headerCell.dataset.sort = 'no';
-                            headerCell.appendChild(document.createElement('span'));
                             
                             switch (typeof samplerow[index]) {
                                 case 'string':
@@ -193,25 +192,16 @@
         /* #endregion */
 
         /* #region Sort */
-        .func_table th[data-sort="no"] span {
-            content: '●';
-            position: relative;
-            left: 2px;
-            border: 8px solid transparent;
+        .func_table th[data-sort="no"] {
+            background-image: black;
         }
 
-        .func_table th[data-sort="hi"] span {
-            content: '▲';
-            position: relative;
-            left: 2px;
-            border: 8px solid transparent;            
+        .func_table th[data-sort="hi"] {
+            background-image: linear-gradient(black, gray);
         }
 
-        .func_table th[data-sort="lo"] span {
-            content: '▼';
-            position: relative;
-            left: 2px;
-            border: 8px solid transparent;
+        .func_table th[data-sort="lo"] {
+            background-image: linear-gradient(gray, black);
         }
         /* #endregion */
 
