--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -201,7 +201,7 @@
         }
 
         .func_table th[data-sort="hi"] {
-            background-image: linear-gradient(black gray);
+            background-image: linear-gradient(black, gray);
         }
 
         .func_table th[data-sort="lo"] {
