--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -9,8 +9,8 @@
                 ["iana's Unit Rating & Teambuilding Spreadsheet(Mirror)", "https://docs.google.com/spreadsheets/d/1IrE5wimiFWYMxUUWQ8VrJoe0zDUPx8OI4rWja9hKQB4"],
                 ["iana's Unit Rating & Teambuilding Spreadsheet", "https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o"],
                 ["PNC Neural Cloud Projections", "https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU"],
-                ["Neural Cloud Numbers Sheet", "https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc"]
-                ["Algorithms", "https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU"],
+                ["Neural Cloud Numbers Sheet", "https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc"],
+                ["Algorithms", "https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU"]
             )
         </script>
 
