--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -195,7 +195,7 @@
         }
 
         .func_table, .func_table * {
-            background-color: inherit;
+            background: inherit;
         }
 
         .func_table > table {
