--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -209,9 +209,9 @@
         /* #endregion */
 
         /* #region Sort */
-        .func_table th[data-sort="no"] {
-            background: inherit;
-        }
+        /* .func_table th[data-sort="no"] {
+            background: initial;
+        } */
 
         .func_table th[data-sort="hi"] {
             background: linear-gradient(135deg, black, transparent 50%),
@@ -254,8 +254,8 @@
             background: #1b1b1b;
         }
 
-        .func_table .freeze_col:nth-child(even) {
-            background: #282e1f;;
+        .func_table tr:nth-child(even) > .freeze_col {
+            background: #282e1f;
         }
     </style>
 
